--- a/index.html
+++ b/index.html
@@ -9,35 +9,24 @@
 </head>
 <body>
     <!-- ingredify -->
-    <div id="myModal" class="modal">
+    <div id="Modal" class="modal">
         <div class="modal-content">
             <h2 class="close" id="close_modal">X</h2>
-        
         <h1>Ingredients</h1>
-        <ol>
-            <li>asdfd</li>
-            <li>asdfd</li>
-            <li>asdfd</li>
-            <li>asdfd</li>
-            <li>asdfd</li>
-            <li>asdfd</li>
-            <li>asdfd</li>
-            <li>asdfd</li>
-            <li>asdfd</li>
+        <ol id="Ingredi-list">
         </ol>
     </div>
     </div>
     <header>
         <div class="head">
             <div class="logo"></div>
-
                 <div class="msg">
                     <h2>Ingredify provides a large selection of Dish, making it ideal for home cooks. It also has a random dish generator. It's the place to come for delicious selections of meals and that satisfy particular preferences or cravings. </h2>
                 </div>
                 <div class="search-box">
                     <input type="text" id="search" placeholder="Search Categories" list = 'cati' value="">
                     <datalist id="cati"></datalist>
-                    <i class="fa-solid fa-magnifying-glass search-icon" style="color: #000000;"></i>
+                    <i class="fa-solid fa-magnifying-glass search-icon" id="search-icon" style="color: #000000;"></i>
                 </div>
             </div>
     </header>
@@ -49,25 +38,7 @@
         </div>
     </div>
     <h1 id="Search-name"></h1>
-    <div class="search-result" id="search-result">
-        <!-- <div class="result">
-            <img src="https://images.unsplash.com/photo-1546069901-ba9599a7e63c?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxleHBsb3JlLWZlZWR8Mnx8fGVufDB8fHx8fA%3D%3D" id="result-img" alt="">
-            <h4 id="reuslt-name">Helolo</h4>
-        </div>
-        <div class="result">
-            <img src="https://images.unsplash.com/photo-1546069901-ba9599a7e63c?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxleHBsb3JlLWZlZWR8Mnx8fGVufDB8fHx8fA%3D%3D" id="result-img" alt="">
-            <h4 id="reuslt-name">Helolo</h4>
-        </div>
-        <div class="result">
-            <img src="https://images.unsplash.com/photo-1546069901-ba9599a7e63c?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxleHBsb3JlLWZlZWR8Mnx8fGVufDB8fHx8fA%3D%3D" id="result-img" alt="">
-            <h4 id="reuslt-name">Helolo</h4>
-        </div>
-        <div class="result">
-            <img src="https://images.unsplash.com/photo-1546069901-ba9599a7e63c?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxleHBsb3JlLWZlZWR8Mnx8fGVufDB8fHx8fA%3D%3D" id="result-img" alt="">
-            <h4 id="reuslt-name">Helolo</h4>
-        </div> -->
-
-    </div>
+    <div class="search-result" id="search-result"></div>
     
 </body>
 </html>
