comments and some functionality

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <!-- ingredify -->
+    <!-- Modal -->
     <div id="Modal" class="modal">
+        <!-- inner box in modal -->
         <div class="modal-content">
             <h2 class="close" id="close_modal">X</h2>
         <h1>Ingredients</h1>
@@ -19,10 +21,13 @@
     </div>
     <header>
         <div class="head">
+            <!-- logo -->
             <div class="logo"></div>
+            <!-- about the website -->
                 <div class="msg">
                     <h2>Ingredify provides a large selection of Dish, making it ideal for home cooks. It also has a random dish generator. It's the place to come for delicious selections of meals and that satisfy particular preferences or cravings. </h2>
                 </div>
+                <!-- search box -->
                 <div class="search-box">
                     <input type="text" id="search" placeholder="Search Categories" list = 'cati' value="">
                     <datalist id="cati"></datalist>
@@ -30,12 +35,14 @@
                 </div>
             </div>
     </header>
-
+<!-- heading after search box -->
     <h1 class="heading">What We're Cooking</h1>
     <div class="container">
+        <!-- random meal image -->
         <div class="random-meal" id="random-meal">
             <img src="" id="random-img" alt="">
         </div>
+        <!-- about random meal -->
         <div class="random-meal-text">
             <h2 id="random-dish-name"></h2>
             <h3>Area:  <span id="area"></span> </h3>          
@@ -43,21 +50,24 @@
             <button><a href="" id="youtube" target="_blank">Watch Video</a></button>     
         </div>
     </div>
+    <!-- searched category -->
     <h1 id="Search-name"></h1>
+    <!-- search result -->
     <div class="search-result" id="search-result"></div>
     <footer>
+        <!-- footer -->
         <div class="footer">
+            <!-- about ingredify -->
             <div class="left">
                 <h1>Ingredify</h1>
                 <p>Ingredify provides a large selection of Dish, making it ideal for home cooks. It also has a random dish generator. It's the place to come for delicious selections of meals and that satisfy particular preferences or cravings.</p>
             </div>
+            <!-- options to contact me -->
             <div class="right">
                 <h1>Contact Us</h1>
                 <a href="https://github.com/ShriyansJindal" target="_blank"><i class="fa-brands fa-github" style="color: #ffffff;"></i></a>
                 <a href="https://www.linkedin.com/in/shriyans-jindal" target="_blank"><i class="fa-brands fa-linkedin" style="color: #ffffff;"></i></a>
                 <a href="https://www.instagram.com/jindal.shriyans" target="_blank"><i class="fa-brands fa-instagram" style="color: #ffffff;"></i></a>
-                
-                
             </div>
         </div>
     </footer>
