--- a/index.html
+++ b/index.html
@@ -71,7 +71,11 @@
             </div>
         </div>
     </footer>
-    <h4 class="made">Made With ❤️ By Shriyans Jindal</h4>
+    <div class="made-by">
+        <h4>Made With ❤️ By Shriyans Jindal</h4>
+        <h4>© GroGames@23</h4>
+
+    </div>
 </body>
 </html>
 <script src="app.js" defer></script>
